--- a/pom.xml
+++ b/pom.xml
@@ -208,12 +208,12 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>1.2.2</version>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
-            <version>1.2.2</version>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -246,6 +246,12 @@
             <artifactId>flink-tests_2.11</artifactId>
             <version>${flink.version}</version>
             <scope>test</scope>
+        </dependency>
+        <!-- phoenix -->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.2</version>
         </dependency>
     </dependencies>
 
